# docky

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  build_doc.py  pyproject.toml  pytest.ini  requirement.txt  requirements-build.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  voodoo
.github/workflows/: ci.yml
ci/: after_success.sh  before_deploy.sh  install.sh  script.sh
doc/: command_line.rst  conf.py  index.rst  install_dnsmasq.rst  install_traefik.rst
doc/_static/: custom.css
doc/api/: modules.rst  voodoo.locomotive.rst  voodoo.odoo.rst  voodoo.rails.rst  voodoo.rst  voodoo.ruby.rst  voodoo.wagon.rst
doc/manual/: installation.rst  introduction.rst  roadmap.rst
docky/: __init__.py  dcpatched.py  forward.py  hook.py  main.py  proxy.py
docky/cmd/: __init__.py  base.py  forward.py  init.py  kill.py  migrate.py  proxy.py  remote.py  run_open.py
docky/common/: __init__.py  api.py  config.py  generator.py  hook.py  project.py  proxy.py  remote.py
docky/locomotive/: hook.py
docky/odoo/: docker-compose.yml  hook.py
docky/rails/: hook.py
docky/ruby/: hook.py
docky/template/: locomotive.docker-compose.yml  odoo.docker-compose.yml  ruby.docker-compose.yml  wagon.docker-compose.yml
docky/wagon/: hook.py
tests/: test_voodoo.py
traefik/: traefik.service  traefik.toml
voodoo/: __init__.py  hook.py  main.py  voodoo.py
voodoo/config/: .kitchen.yml  Berksfile  service.yml
voodoo/locomotive/: docker-compose.yml
voodoo/odoo/: __init__.py  docker-compose.yml  hook.py
voodoo/rails/: docker-compose.yml  hook.py
(+7 files in other folders)
